--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "pigeon-maps": "^0.11.1",
+    "pigeon-marker": "^0.3.4",
+    "pigeon-overlay": "^0.2.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
