--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
+    "react-sidebar": "^3.0.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
