--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-redux": "^5.0.7",
     "react-sidebar": "^3.0.2",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
